test/integration/bad/tuples/bad_unpack_fn_type.stan
functions {
  int foo() {
    int x;
    (foo, x) = (foo, 1);
    return x;
  }
}
